# project3

./: CMakeLists.txt  DatalogProgram.cpp  DatalogProgram.h  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  main.cpp
